test/neg/ebind-01.smt2_
; Uninterpreted Sorts


; Uninterpreted Functions


; Qualifiers


; Well-formedness constraints


; Horn constraints
(constraint (forall ((m Int)(x1 Int)(v1 Int)) (=> (and True (and True (= v1 (+ m 1)))) (= v1 x1))))
(constraint (forall ((m Int)(x1 Int)(v2 Int)) (=> (and True (and True (= v2 (+ x1 1)))) (= v2 (+ 20 m)))))
